...
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="Quay lại" />

        <TextView
            android:id="@+id/detail_title"
            style="@style/ExText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:text="Chi tiết buổi tập"
...
